tests/e2e/string_templates_complicated_concatb.error
Error: syntax error in story at line 3

3|    d = "{b}" + "{a * 2}" / (random string length: (random integer low:10 high:40))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0103: `/` between `string` and `string` is not supported.
