tests/e2e/string_templates_complicated_concatb.story
a = 1
b = 2
d = "{b}" + "{a * 2}" / (random string length: (random integer low:10 high:40))
